--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -16,10 +16,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    
+
     - name: Install dependencies
       shell: bash
-      run: sudo apt-get llvm-10-dev libxml2-dev
+      run: sudo apt install llvm-10-dev libxml2-dev
 
     - name: Create Build Environment
       # Some projects don't allow in-source building, so create a separate build directory
