--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -19,7 +19,7 @@ jobs:
 
     - name: Install dependencies
       shell: bash
-      run: sudo apt install llvm-10-dev libxml2-dev
+      run: sudo apt install llvm-10-dev libxml2-dev uuid-dev
 
     - name: Create Build Environment
       # Some projects don't allow in-source building, so create a separate build directory
